examples/kraken-example/public/templates/locales/US_en/errors/index.int
import locales.US_en.errors.http_404,
       locales.US_en.errors.http_500,
       locales.US_en.errors.http_503
